# zetup-rust

./: .gitignore  README.md
grrs/: Cargo.toml
grrs/src/: main.rs
req/: Cargo.toml
req/src/: main.rs
