[package]
name = "req"
version = "0.1.0"
authors = ["Zane Hitchcox <zwhitchcox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {"version"="0.10.6", features=["json"]}
tokio = { version = "0.2", features = ["macros"] }
serde_json = "1.0.55"
